--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,8 @@
     "type": "library",
     "description": "Replacement for the PHP PDO OCI class",
     "keywords": ["oracle","oci","pdo","pdo_oci"],
-    "homepage": "http://github.com/taq/pdooci",
+    "homepage": "https://github.com/taq/pdooci",
     "license": "GPL-2.0-or-later",
-    "version": "1.0.8",
     "authors": [
         {
             "name": "Eustaquio Rangel",
@@ -15,7 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=8.1"
     },
     "autoload": {
        "psr-4": {
